--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
           sudo apt update && sudo apt install -y \
             python3-pip python3-setuptools python3-wheel git zip unzip zlib1g-dev \
             libncurses5 libffi-dev libssl-dev liblzma-dev libgdbm-dev libbz2-dev libreadline-dev \
-            libsqlite3-dev libffi-dev libgdbm-compat-dev curl
+            libsqlite3-dev libffi-dev libgdbm-compat-dev curl aidl
           python3 -m pip install --upgrade pip setuptools cython
           python3 -m pip install buildozer
       
