--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,62 +1,67 @@
-name: CI
+name: Build Kivy APK
 on:
   push:
-    branches: [main]
+    branches: [main]  # Runs workflow on push to the 'main' branch
+  pull_request:
+    branches: [main]  # Runs workflow on pull requests to 'main'
+
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-20.04  # Use Ubuntu 20.04 (Ubuntu 22.04 can break some dependencies)
+    
     steps:
-      # Checkout the repository
+      # ✅ Step 1: Checkout the repository
       - name: Checkout Code
         uses: actions/checkout@v3
       
-      # Set up Temurin Java 17
+      # ✅ Step 2: Set up Java (Required for Android SDK)
       - name: Set up Temurin Java 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
       
-      # Set up Python
+      # ✅ Step 3: Set up Python environment
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
-      
-      # Install Buildozer and dependencies
+          python-version: '3.10'  # Ensure compatibility with Buildozer
+
+      # ✅ Step 4: Install Buildozer and dependencies
       - name: Install Buildozer and dependencies
         run: |
           sudo apt update && sudo apt install -y \
             python3-pip python3-setuptools python3-wheel git zip unzip zlib1g-dev \
             libncurses5 libffi-dev libssl-dev liblzma-dev libgdbm-dev libbz2-dev libreadline-dev \
-            libsqlite3-dev libffi-dev libgdbm-compat-dev curl aidl
+            libsqlite3-dev libffi-dev libgdbm-compat-dev curl default-jdk aidl
           python3 -m pip install --upgrade pip setuptools cython
           python3 -m pip install buildozer
       
-      # Set up Android SDK and NDK
+      # ✅ Step 5: Install Android SDK and NDK
       - name: Install Android SDK and NDK
         run: |
           mkdir -p ~/.buildozer/android/platform
           wget https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip -O /tmp/cmdline-tools.zip
           unzip -d ~/.buildozer/android/platform /tmp/cmdline-tools.zip
           rm /tmp/cmdline-tools.zip
-          yes | ~/.buildozer/android/platform/cmdline-tools/bin/sdkmanager --sdk_root=~/.buildozer/android/platform "platform-tools" "build-tools;33.0.2" "platforms;android-33" "ndk;25.2.9519653"
-      
-      # Initialize Buildozer (if not already initialized)
+          yes | ~/.buildozer/android/platform/cmdline-tools/bin/sdkmanager --sdk_root=~/.buildozer/android/platform \
+            "platform-tools" "build-tools;33.0.2" "platforms;android-33" "ndk;25.2.9519653"
+
+      # ✅ Step 6: Initialize Buildozer (if not already initialized)
       - name: Initialize Buildozer
         run: |
           if [ ! -f buildozer.spec ]; then
             buildozer init
           fi
-      
-      # Build the Android APK
+
+      # ✅ Step 7: Build the Android APK
       - name: Build Android APK
         run: |
           buildozer android debug
-      
-      # Upload the APK as an artifact
+
+      # ✅ Step 8: Upload APK as an artifact (so it can be downloaded)
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: android-apk
-          path: bin/*.apk
+          path: bin/*.apk  # Uploads the generated APK
