--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,67 +1,72 @@
 name: Build Kivy APK
 on:
   push:
-    branches: [main]  # Runs workflow on push to the 'main' branch
+    branches: [main]
   pull_request:
-    branches: [main]  # Runs workflow on pull requests to 'main'
+    branches: [main]
 
 jobs:
   build:
-    runs-on: ubuntu-20.04  # Use Ubuntu 20.04 (Ubuntu 22.04 can break some dependencies)
+    runs-on: ubuntu-20.04
     
     steps:
-      # ✅ Step 1: Checkout the repository
       - name: Checkout Code
         uses: actions/checkout@v3
       
-      # ✅ Step 2: Set up Java (Required for Android SDK)
       - name: Set up Temurin Java 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
       
-      # ✅ Step 3: Set up Python environment
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'  # Ensure compatibility with Buildozer
+          python-version: '3.10'
 
-      # ✅ Step 4: Install Buildozer and dependencies
-      - name: Install Buildozer and dependencies
+      - name: Install Buildozer dependencies
         run: |
           sudo apt update && sudo apt install -y \
-            python3-pip python3-setuptools python3-wheel git zip unzip zlib1g-dev \
-            libncurses5 libffi-dev libssl-dev liblzma-dev libgdbm-dev libbz2-dev libreadline-dev \
-            libsqlite3-dev libffi-dev libgdbm-compat-dev curl default-jdk aidl
-          python3 -m pip install --upgrade pip setuptools cython
-          python3 -m pip install buildozer
+            python3-pip python3-setuptools python3-wheel \
+            git zip unzip openjdk-17-jdk \
+            virtualenv \
+            build-essential libsqlite3-dev sqlite3 bzip2 libbz2-dev \
+            zlib1g-dev libssl-dev libncurses5-dev libncursesw5-dev \
+            libreadline-dev libsqlite3-dev libgdbm-dev libdb5.3-dev \
+            libbz2-dev libexpat1-dev liblzma-dev libffi-dev \
+            libffi-dev libltdl-dev \
+            libgl1 libgles2 \
+            autoconf automake libtool pkg-config
+          python -m pip install --upgrade pip setuptools cython
       
-      # ✅ Step 5: Install Android SDK and NDK
-      - name: Install Android SDK and NDK
-        run: |
-          mkdir -p ~/.buildozer/android/platform
-          wget https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip -O /tmp/cmdline-tools.zip
-          unzip -d ~/.buildozer/android/platform /tmp/cmdline-tools.zip
-          rm /tmp/cmdline-tools.zip
-          yes | ~/.buildozer/android/platform/cmdline-tools/bin/sdkmanager --sdk_root=~/.buildozer/android/platform \
-            "platform-tools" "build-tools;33.0.2" "platforms;android-33" "ndk;25.2.9519653"
+      - name: Install Buildozer
+        run: pip install --user --upgrade buildozer
 
-      # ✅ Step 6: Initialize Buildozer (if not already initialized)
-      - name: Initialize Buildozer
+      - name: Accept Android SDK licenses
+        run: |
+          mkdir -p ~/.android
+          echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" > ~/.android/repositories.cfg
+          echo "y" | pip install androidsdk
+          echo "y" | androidsdk --sdk_id="build-tools;33.0.2" --sdk_id="platform-tools" --sdk_id="platforms;android-33" --sdk_id="ndk;25.2.9519653"
+      
+      - name: Initialize Buildozer if needed
         run: |
           if [ ! -f buildozer.spec ]; then
             buildozer init
+            # Optional: Modify default buildozer.spec for your needs
+            sed -i 's/^android.sdk_path =.*/android.sdk_path = \/home\/runner\/.local\/lib\/python3.10\/site-packages\/androidsdk\/android-sdk/g' buildozer.spec
+            sed -i 's/^android.ndk_path =.*/android.ndk_path = \/home\/runner\/.local\/lib\/python3.10\/site-packages\/androidsdk\/android-sdk\/ndk\/25.2.9519653/g' buildozer.spec
+            sed -i 's/^#android.accept_sdk_license =.*/android.accept_sdk_license = True/g' buildozer.spec
+            sed -i 's/^android.api =.*/android.api = 33/g' buildozer.spec
           fi
 
-      # ✅ Step 7: Build the Android APK
-      - name: Build Android APK
+      - name: Build APK
         run: |
+          export PATH=$PATH:~/.local/bin
           buildozer android debug
-
-      # ✅ Step 8: Upload APK as an artifact (so it can be downloaded)
-      - name: Upload APK artifact
+      
+      - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: android-apk
-          path: bin/*.apk  # Uploads the generated APK
+          path: bin/*.apk
