--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,30 +34,34 @@ jobs:
             zlib1g-dev libssl-dev libncurses5-dev libncursesw5-dev \
             libreadline-dev libsqlite3-dev libgdbm-dev libdb5.3-dev \
             libbz2-dev libexpat1-dev liblzma-dev libffi-dev \
-            libffi-dev libltdl-dev \
-            libgl1 libgles2 \
-            autoconf automake libtool pkg-config
+            libtool pkg-config \
+            libgl1 libgles2 autoconf automake
           python -m pip install --upgrade pip setuptools cython
       
       - name: Install Buildozer
         run: pip install --user --upgrade buildozer
-
-      - name: Accept Android SDK licenses
+      
+      - name: Accept SDK licenses and prepare environment
         run: |
           mkdir -p ~/.android
           echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" > ~/.android/repositories.cfg
-          echo "y" | pip install androidsdk
-          echo "y" | androidsdk --sdk_id="build-tools;33.0.2" --sdk_id="platform-tools" --sdk_id="platforms;android-33" --sdk_id="ndk;25.2.9519653"
+          yes | buildozer android update --sdk_dir=$HOME/.buildozer/android/platform/android-sdk
       
       - name: Initialize Buildozer if needed
         run: |
           if [ ! -f buildozer.spec ]; then
             buildozer init
-            # Optional: Modify default buildozer.spec for your needs
-            sed -i 's/^android.sdk_path =.*/android.sdk_path = \/home\/runner\/.local\/lib\/python3.10\/site-packages\/androidsdk\/android-sdk/g' buildozer.spec
-            sed -i 's/^android.ndk_path =.*/android.ndk_path = \/home\/runner\/.local\/lib\/python3.10\/site-packages\/androidsdk\/android-sdk\/ndk\/25.2.9519653/g' buildozer.spec
+            # Modify default buildozer.spec for your needs
             sed -i 's/^#android.accept_sdk_license =.*/android.accept_sdk_license = True/g' buildozer.spec
             sed -i 's/^android.api =.*/android.api = 33/g' buildozer.spec
+          else
+            # Ensure license acceptance is enabled if buildozer.spec already exists
+            if ! grep -q "android.accept_sdk_license = True" buildozer.spec; then
+              sed -i 's/^#android.accept_sdk_license =.*/android.accept_sdk_license = True/g' buildozer.spec
+              if ! grep -q "android.accept_sdk_license" buildozer.spec; then
+                echo "android.accept_sdk_license = True" >> buildozer.spec
+              fi
+            fi
           fi
 
       - name: Build APK
